--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "@fortawesome/fontawesome-free": "^5.9.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.26",
-    "cross-env": "^5.2.0",
+    "cross-env": "^7.0.2",
     "minimist": "^1.2.0",
-    "rollup": "^1.12.1",
+    "rollup": "^2.7.6",
     "rollup-plugin-buble": "^0.19.6",
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-terser": "^4.0.4",
-    "rollup-plugin-vue": "^5.0.0",
+    "rollup-plugin-terser": "^5.3.0",
+    "rollup-plugin-vue": "5.1.6",
     "vue": "^2.6.10",
     "vue-template-compiler": "^2.6.10"
   }
