--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "rollup-plugin-commonjs": "^10.0.0",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-terser": "^5.3.0",
+    "rollup-plugin-typescript2": "^0.27.0",
     "rollup-plugin-vue": "5.1.6",
+    "typescript": "^3.8.3",
     "vue": "^2.6.10",
     "vue-template-compiler": "^2.6.10"
   }
