--- a/package.json
+++ b/package.json
@@ -2,36 +2,50 @@
   "name": "bootstrap-toast-vue",
   "version": "0.1.0",
   "description": "",
-  "module": "dist/bootstrap-toast-vue.esm.js",
   "main": "dist/bootstrap-toast-vue.ssr.js",
+  "browser": "dist/bootstrap-toast-vue.esm.js",
+  "module": "dist/bootstrap-toast-vue.esm.js",
+  "unpkg": "dist/bootstrap-toast-vue.min.js",
+  "types": "bootstrap-toast-vue.d.ts",
   "files": [
     "dist/*",
+    "bootstrap-toast-vue.d.ts",
     "src/**/*.vue"
   ],
   "scripts": {
+    "serve": "vue-cli-service serve dev/serve.ts",
     "build": "cross-env NODE_ENV=production rollup --config build/rollup.config.js",
     "build:ssr": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format cjs",
-    "build:es": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format es"
+    "build:es": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format es",
+    "build:unpkg": "cross-env NODE_ENV=production rollup --config build/rollup.config.js --format iife"
   },
   "peerDependencies": {
-    "bootstrap-vue": "^2.0.0-rc.26",
+    "bootstrap-vue": "^2.13.0",
     "vue": "^2.6.10"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.9.0",
-    "bootstrap": "^4.3.1",
-    "bootstrap-vue": "^2.0.0-rc.26",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-typescript": "^7.9.0",
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "@rollup/plugin-alias": "^2.2.0",
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-replace": "^2.3.2",
+    "@vue/cli-plugin-babel": "^4.3.1",
+    "@vue/cli-plugin-typescript": "^4.3.1",
+    "@vue/cli-service": "^4.3.1",
+    "bootstrap-vue": "^2.13.0",
     "cross-env": "^7.0.2",
-    "minimist": "^1.2.0",
-    "rollup": "^2.7.6",
-    "rollup-plugin-buble": "^0.19.6",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-replace": "^2.2.0",
+    "minimist": "^1.2.5",
+    "rollup": "^2.7.3",
+    "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-terser": "^5.3.0",
-    "rollup-plugin-typescript2": "^0.27.0",
-    "rollup-plugin-vue": "5.1.6",
+    "rollup-plugin-vue": "^5.1.6",
     "typescript": "^3.8.3",
-    "vue": "^2.6.10",
-    "vue-template-compiler": "^2.6.10"
+    "vue": "^2.6.11",
+    "vue-template-compiler": "^2.6.11"
+  },
+  "engines": {
+    "node": ">=10"
   }
 }
