--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "bootstrap-toast-vue",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "",
   "main": "dist/bootstrap-toast-vue.ssr.js",
   "browser": "dist/bootstrap-toast-vue.esm.js",
   "module": "dist/bootstrap-toast-vue.esm.js",
   "unpkg": "dist/bootstrap-toast-vue.min.js",
-  "types": "bootstrap-toast-vue.d.ts",
+  "types": "dist/index.d.ts",
   "files": [
     "dist/*",
     "bootstrap-toast-vue.d.ts",
@@ -40,6 +40,7 @@
     "rollup": "^2.7.3",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-terser": "^5.3.0",
+    "rollup-plugin-typescript2": "^0.27.0",
     "rollup-plugin-vue": "^5.1.6",
     "typescript": "^3.8.3",
     "vue": "^2.6.11",
